frontend/docker/nginx/manifests/nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-nginx-service
  labels:
    name: front-nginx
spec:
  ports:
    - port: 80
  selector:
    name: front-nginx-deployment
